--- a/EW/Balancing/MM_MalFunc.cfg
+++ b/EW/Balancing/MM_MalFunc.cfg
@@ -1,3 +1,59 @@
 @PART[MK41VLSQUAD]:NEEDS[SMA] {
 	-MODULE[ModuleVLSLauncher] {}
 }
+@PART[APARradar]:NEEDS[SMA] {
+	@title = APAR
+	@description = The Thales Advanced Phased Array Radar shipborne multifunction 3D radar. APAR has four fixed sensor arrays, fixed on a pyramidal structure. Each face consists of 3424 transmit/receive (TR) modules operating at X band frequencies. APAR apparently can track over 300 targets at 150km or guide up to 32 SARH missiles simultaneously. APAR is installed on four RNLN LCF De Zeven Provinciën-class frigates, three German Navy F124 Sachsen-class frigates, and three Royal Danish Navy Ivar Huitfeldt class frigates. APAR is typically paired with Thales SMART-L PESA radar.
+}
+@PART[APARradar]:NEEDS[SMA] {
+	@title = APAR
+	@description = The Thales Advanced Phased Array Radar shipborne multifunction 3D radar. APAR has four fixed sensor arrays, fixed on a pyramidal structure. Each face consists of 3424 transmit/receive (TR) modules operating at X band frequencies. APAR apparently can track over 300 targets at 150km or guide up to 32 SARH missiles simultaneously. APAR is installed on four RNLN LCF De Zeven Provinciën-class frigates, three German Navy F124 Sachsen-class frigates, and three Royal Danish Navy Ivar Huitfeldt class frigates. APAR is typically paired with Thales SMART-L PESA radar.
+}
+@PART[STIRradar]:NEEDS[SMA] {
+	@title = STIR
+	@description = The Thales Signal Tracking and Illumination Radar Medium-to-Long range fire-control radar system used for electro-optical tracking and missile illumination. The STIR alone cannot scan, but it can illuminate targets found by other radars.
+}
+@PART[smartsradar]:NEEDS[SMA] {
+	@title = SMART-S
+	@description = The Thales SMART-S (Signal Multi-beam Acquisition Radar for Tracking S-band) naval Medium-to-Long range air and surface surveillance multi-beam passive electronically scanned array 3D radar. SMART-S Mk. 2 is very successful. Only six years after its introduction, 30 systems were sold to navies all over the world. The system has two operating modes: medium range up to 150 km at 27 RPM and long range up to 250 km at 13.5 RPM.
+}
+@PART[MK41VLSQUAD]:NEEDS[SMA] {
+	@title = Mk. 41 VLS SDLS
+	@description = The Mark 41 Vertical Launching System shipborne missile canister launching system provides a rapid-fire launch capability against hostile threats. The VLS concept was derived from work on the Aegis Combat System. The Mk 41 is capable of firing the following missiles: RIM-66, RIM-67, RIM-161, RIM-174, RGM-109, RUM-139, RIM-7 and RIM-162. The Mk 41 VLS adopts modular design concept, which result in different versions that vary in size and weight due to different "canisters" in various modules. 
+}
+@PART[MK41VLSINGLE]:NEEDS[SMA] {
+	@title = Mk. 41 VLS
+	@description = The Mark 41 Vertical Launching System shipborne missile canister launching system provides a rapid-fire launch capability against hostile threats. The VLS concept was derived from work on the Aegis Combat System. The Mk 41 is capable of firing the following missiles: RIM-66, RIM-67, RIM-161, RIM-174, RGM-109, RUM-139, RIM-7 and RIM-162. The Mk 41 VLS adopts modular design concept, which result in different versions that vary in size and weight due to different "canisters" in various modules. 
+}
+@PART[RAMLauncherTurret]:NEEDS[SMA] {
+	@title = Mk. 49 RAM Launcher
+	@description = The Mark 49 Launcher, also known as RAM-Launcher, is capable of holding up to 21 RIM-116 Rolling Airframe Missiles (RAM).
+}
+@PART[SEARAMLauncherTurret]:NEEDS[SMA] {
+	@title = Mk. 15 Mod. 31 SeaRAM CIWS
+	@description = The Mark 15 SeaRAM combines the radar and electro-optical system of the Phalanx CIWS Mk. 15 Block 1B with an 11-cell RAM Mk. 49 launcher to produce an autonomous system which does not need any external information to engage threats. Like the Phalanx, SeaRAM can be fitted to any class of ship. As of December 2013, one SeaRAM is fitted to each Independence-class vessel. In November 2015, the Navy completed installation of a SeaRAM on the first of four Arleigh Burke-class destroyers patrolling with the U.S. 6th Fleet.
+}
+@PART[theotomelara76compact]:NEEDS[SMA] {
+	@title = OTO Melara 76mm Compact
+	@description = The OTO Melara Compact 76mm water-cooled naval gun commonly used all around the world. It fires around 85 rounds/minute and is based on the Oto Melara 76/62C. The system is compact enough to be installed on relatively small warships. Its high rate of fire and the availability of several types of ammunition make it capable for short-range anti-missile point defence, anti-aircraft, anti-surface, and ground support.
+	@MODULE[ModuleWeapon] {
+		%shortName = 76mm OTO
+	}
+}
+@PART[thephalanx]:NEEDS[SMA] {
+	@title = Mk. 15 Block 1A Phalanx CIWS
+}
+@PART[THERIM-116]:NEEDS[SMA] {
+	@title = RIM-116 RAM
+	@description = The Raytheon RIM-116 Rolling Airframe Missile infrared-homing Surface-to-Air Missile intended originally and used primarily as a point-defense weapon against anti-ship cruise missiles. As its name indicates, RAM rolls as it flies. The missile must roll during flight because the RF tracking system uses a two-antenna interferometer that can measure phase interference of the electromagnetic wave in one plane only. The rolling interferometer permits the antennas to look at all planes of incoming energy. The Rolling Airframe Missiles, together with the Mk. 49 GMLS make up the RAM Mk. 31 Guided Missile Weapon System.
+	@MODULE[MissileLauncher] {
+		%shortName = RIM-116 RAM
+	}
+}
+@PART[THERIM-67B]:NEEDS[SMA] {
+	@title = RIM-66 SM-1ER
+	@description = The Raytheon RIM-66 Standard MR (SM-1MR/SM-2MR) medium-range Surface-to-Air missile and secondarily anti-ship missile originally developed for the United States Navy (USN). The RIM-67 was developed as a replacement for the RIM-2 and RIM-24.
+	@MODULE[MissileLauncher] {
+		%shortName = RIM-66 SM-1MR
+	}
+}
