--- a/Missiles/aam_K13.cfg
+++ b/Missiles/aam_K13.cfg
@@ -127,7 +127,7 @@ PART {
 	rescaleFactor = 1
 
 	MODEL {
-		model = KKA/Missiles/aam_R3
+		model = KKA/Missiles/R3
 	}
 	NODE {
 		name = missileNode
