--- a/EW/Balancing/MM_FDC.cfg
+++ b/EW/Balancing/MM_FDC.cfg
@@ -1,6 +1,6 @@
 
 
-@PART[Elden40]:NEEDS[FoxDefenseContracts&SMA] {
+@PART[Elden40]:NEEDS[SMA] {
     @MODULE[ModuleRadar] {
 		@directionalFieldOfView = 10
 		@scanRotationSpeed = 60
@@ -20,73 +20,162 @@
         } 
     }
 }
+@PART[Strids74]:NEEDS[SMA] {
+	-MODULE[ModuleRadar] {}
+}
+@PART[T-10]:NEEDS[SMA] {
+	-MODULE[ModuleRadar] {}
+}
+@PART[T-44]:NEEDS[SMA] {
+	-MODULE[ModuleRadar] {}
+}
+@PART[T-54]:NEEDS[SMA] {
+	-MODULE[ModuleRadar] {}
+}
+@PART[T-64]:NEEDS[SMA] {
+	-MODULE[ModuleRadar] {}
+}
+@PART[T-90]:NEEDS[SMA] {
+	-MODULE[ModuleRadar] {}
+}
+@PART[T26E4]:NEEDS[SMA] {
+	-MODULE[ModuleRadar] {}
+	@title = M26E4 Pershing
+}
+@PART[AbramsA2]:NEEDS[SMA] {
+	-MODULE[ModuleRadar] {}
+}
+@PART[AMT34]:NEEDS[SMA] {
+	-MODULE[ModuleRadar] {}
+}
+@PART[Amx50B]:NEEDS[SMA] {
+	@title = AMX 50B
+	-MODULE[ModuleRadar] {}
+}
+@PART[AmxELCbis]:NEEDS[SMA] {
+	@title = AMX ELC bis
+	-MODULE[ModuleRadar] {}
+}
+@PART[BatChat25]:NEEDS[SMA] {
+	@title = Batignolles-Chatillon Char 25t
+	-MODULE[ModuleRadar] {}
+}
+@PART[BMP3HE]:NEEDS[SMA] {
+	-MODULE[ModuleRadar] {}
+}
+@PART[FV4005]:NEEDS[SMA] {
+	@title = FV4005 Stage II
+	-MODULE[ModuleRadar] {}
+}
+@PART[HSTVAP]:NEEDS[SMA] {
+	-MODULE[ModuleRadar] {}
+}
+@PART[IS2]:NEEDS[SMA] {
+	-MODULE[ModuleRadar] {}
+}
+@PART[IS7]:NEEDS[SMA] {
+	-MODULE[ModuleRadar] {}
+}
+@PART[Leopard1]:NEEDS[SMA] {
+	@title = Leopard 1A0
+	-MODULE[ModuleRadar] {}
+}
+@PART[Leopard2A5]:NEEDS[SMA] {
+	-MODULE[ModuleRadar] {}
+}
+@PART[M103]:NEEDS[SMA] {
+	-MODULE[ModuleRadar] {}
+}
+@PART[M3Bradly]:NEEDS[SMA] {
+	@title = M3 Bradley CFV
+	-MODULE[ModuleRadar] {}
+}
+@PART[Obj906]:NEEDS[SMA] {
+	-MODULE[ModuleRadar] {}
+}
+@PART[M42DusterAP]:NEEDS[SMA] {
+	@title = M42 Duster
+}
+@PART[T95]:NEEDS[SMA] {
+	@title = T28 Super Heavy Tank
+}
+@PART[T92HMC]:NEEDS[SMA] {
+	@title = T92 HMC
+}
+@PART[TortoiseAPCBC]:NEEDS[SMA] {
+	@title = A39 Tortoise
+}
+@PART[PantherII]:NEEDS[SMA] {
+	@title = Panther II
+}
+@PART[BMP3HE]:NEEDS[SMA] {
+	@title = 2A70 (BMP-3)
+	@description = The Object 688M / BMP-3 Soviet and Russian infantry fighting vehicle turret armed with 2A70 100mm gun as part of the 2K23 Complex. BMP-3 is a successor to the BMP-1 and BMP-2. The abbreviation BMP stands for boevaya mashina pehoty (боевая машина пехоты, literally "infantry combat vehicle").
+	@MODULE[ModuleWeapon] {
+		%shortName = 100mm 2A70
+	}
+}
+@PART[IS2]:NEEDS[SMA] {
+	@title = 52PT471 (IS-2)
+	@description = The Object 240 / IS-122 / IS-2 heavy tank turret armed with the 52PT471 / D-25T 122mm gun. IS-2 went into service in April 1944 and was used as a spearhead by the Red Army in the final stage of the Battle of Berlin.
+	@MODULE[ModuleWeapon] {
+		%shortName = 122mm 52PT471
+	}
+}
+@PART[IS7]:NEEDS[SMA] {
+	@title = S-70 (IS-7)
+	@description = The Object 260 / IS-7 heavy tank turret armed with the S-70 130mm gun, is a Soviet tank that began development in 1945. The vehicle existed only in prototype form and was cancelled in favor of the T-10 tank.
+	@MODULE[ModuleWeapon] {
+		%shortName = 130mm S-70
+	}
+}
+@PART[Obj268]:NEEDS[SMA] {
+	@title = M-64 (Object 268)
+	@description = The Object 268 self-propelled gun was one of the many derivative designs of the T-10 heavy tank. The concept began on 2 July 1952 at the Leningrad Kirov Plant on the order of the Council of Ministers USSR. The Object 268 would follow in the same line of doctrine as had the earlier Soviet self-propelled guns of World War II, the SU-100, -122, and -152. This contrasted with the Western concept of a self-propelled gun being used as an artillery piece rather than the Soviet usage as a tank destroyer. There had been earlier attempts at converting a heavy tank to a self-propelled gun, using the chassis of the IS-4 and IS-7, but those had not been fully developed and were cancelled. The IS-4 production was running too slowly and the IS-7 had been too complex to manufacture in large numbers. The Leningrad Kirov Plant worked to produce an SPG on the T-10 chassis by combining it with the 152 mm M-64 cannon, which had high velocity and was much more powerful than earlier 152 mm cannons. Drawing work led to the Object 730 SPG which would be paired with the M-53 cannon, a parallel development to the M-64.
+	@MODULE[ModuleWeapon] {
+		%shortName = 100mm M-64
+	}
+}
+@PART[Obj906]:NEEDS[SMA] {
+	@title = D-58 (PT-85)
+	@description = The Object 906 / PT-85 amphibious light tank turret armed with D-58 85mm gun. The success of the PT-76 amphibious tank prompted the development of a successor with improved characteristics on the battlefield. The PT-76 chassis was taken up by the Stalingrad Tractor Factory in 1962 to be improved. The vehicle was given the project name Object 906. Two were produced and tested between 1962-1963, each armed with an 85 mm cannon and also implemented the newer technology such as gun stabilization, auto-loader, and a welded aluminium armour for weight-saving. The design proved reliable with a 300 hp engine and could reach a top speed of 75 km/h. Had it been adopted, the Object 906 would've been given the name PT-85, but the vehicle design never left the prototype stages and consequently never adopted. A single prototype still exists in Kubinka Tank Museum.
+	@MODULE[ModuleWeapon] {
+		%shortName = 85mm D-58
+	}
+}
+@PART[T-10]:NEEDS[SMA] {
+	@title = 52PT471N (T-10)
+	@description = The Object 730 / T-10 / IS-5 / IS-8 / IS-9 / IS-10 heavy tank turret armed with the 122mm 52PT471N / D-25TS gun was a Soviet heavy tank of the Cold War, the final development of the IS tank series. During development, it was called IS-8 and IS-9. It was accepted into production in 1952 as the IS-10 (Iosif Stalin, Russian form of Joseph Stalin), but due to the political climate in the wake of Stalin's death in 1953, it was renamed T-10.
+	@MODULE[ModuleWeapon] {
+		%shortName = 122mm 52PT471N
+	}
+}
+@PART[T-44]:NEEDS[SMA] {
+	@title = ZIS-S-53 (T-44)
+	@description = The Object 136 / T-44 medium tank is first developed and produced near the end of World War II by the Soviet Union. It was the successor to the T-34, offering improved ride and cross-country performance and much greater armor. Designed to be equipped with an 85 mm main gun, by the time it was fully tested the T-34 had also moved to this weapon. Both tanks offered similar performance, so introducing the T-44 was not considered as important as increasing T-34 production. Fewer than 2,000 T-44s were built, compared to about 58,000 T-34s. Although the T-44 was available by the end of the war, it was not used in combat.
+	@MODULE[ModuleWeapon] {
+		%shortName = 85mm ZIS-S-53
+	}
+}
+@PART[T-54]:NEEDS[SMA] {
+	@title = 52PT412 (T-54)
+	@description = The Object 137 / T-54 medium tank turret armed with 52PT412 / D-10T 100mm gun. T-54 / T-55 tanks are a series of Soviet main battle tanks introduced in the years following the Second World War. The first T-54 prototype was completed at Nizhny Tagil by the end of 1945.
+	@MODULE[ModuleWeapon] {
+		%shortName = 100mm 52PT412
+	}
+}
+@PART[T-64]:NEEDS[SMA] {
+	@title = 2A26 (T-64)
+	@description = The Object 432 / T-64 Soviet second-generation main battle tank turret armed with the 2A26 / D-81Т 125mm smooth-bore gun was introduced in the early 1960s. It was a more advanced counterpart to the T-62: the T-64 served tank divisions, while the T-62 supported infantry in motorized rifle divisions. It introduced a number of advanced features including composite armor, a compact engine and transmission, equipped with an autoloader to allow the crew to be reduced to three so the tank could be smaller and lighter. In spite of being armed and armored like a heavy tank, the T-64 weighed only 38 tonnes (42 short tons; 37 long tons).
+	@MODULE[ModuleWeapon] {
+		%shortName = 125mm 2A26
+	}
+}
+@PART[T-90]:NEEDS[SMA] {
+	@title = 2A46M2 (T-90) Vladimir
+	description = The T-90 is a third-generation Russian battle tank that entered service in 1993. The tank is a modern variation of the T-72B and incorporates many features found on the T-80U. Originally called the T-72BU, but later renamed to T-90, it is an advanced tank in service with Russian Ground Forces and the Naval Infantry. The T-90 uses a 125 mm 2A46M2 / D-81 smoothbore main gun, the 1A45T fire-control system, an upgraded engine, and gunner's thermal sight. Standard protective measures include a blend of steel and composite armour, smoke grenade dischargers, Kontakt-5 explosive-reactive armour and the Shtora infrared ATGM jamming system. It was designed and built by Uralvagonzavod, in Nizhny Tagil, Russia.
+	@MODULE[ModuleWeapon] {
+		%shortName = 125mm 2A46M2
+	}
+}
 
-
-//Local radios removal
-
-@PART[Strids74]:NEEDS[FoxDefenseContracts&SMA] {
-	-MODULE[ModuleRadar] {}
-}
-@PART[T-10]:NEEDS[FoxDefenseContracts&SMA] {
-	-MODULE[ModuleRadar] {}
-}
-@PART[T-44]:NEEDS[FoxDefenseContracts&SMA] {
-	-MODULE[ModuleRadar] {}
-}
-@PART[T-54]:NEEDS[FoxDefenseContracts&SMA] {
-	-MODULE[ModuleRadar] {}
-}
-@PART[T-64]:NEEDS[FoxDefenseContracts&SMA] {
-	-MODULE[ModuleRadar] {}
-}
-@PART[T-90]:NEEDS[FoxDefenseContracts&SMA] {
-	-MODULE[ModuleRadar] {}
-}
-@PART[T26E4]:NEEDS[FoxDefenseContracts&SMA] {
-	-MODULE[ModuleRadar] {}
-}
-@PART[AbramsA2]:NEEDS[FoxDefenseContracts&SMA] {
-	-MODULE[ModuleRadar] {}
-}
-@PART[AMT34]:NEEDS[FoxDefenseContracts&SMA] {
-	-MODULE[ModuleRadar] {}
-}
-@PART[Amx50B]:NEEDS[FoxDefenseContracts&SMA] {
-	-MODULE[ModuleRadar] {}
-}
-@PART[AmxELCbis]:NEEDS[FoxDefenseContracts&SMA] {
-	-MODULE[ModuleRadar] {}
-}
-@PART[BatChat25]:NEEDS[FoxDefenseContracts&SMA] {
-	-MODULE[ModuleRadar] {}
-}
-@PART[BMP3HE]:NEEDS[FoxDefenseContracts&SMA] {
-	-MODULE[ModuleRadar] {}
-}
-@PART[FV4005]:NEEDS[FoxDefenseContracts&SMA] {
-	-MODULE[ModuleRadar] {}
-}
-@PART[HSTVAP]:NEEDS[FoxDefenseContracts&SMA] {
-	-MODULE[ModuleRadar] {}
-}
-@PART[IS2]:NEEDS[FoxDefenseContracts&SMA] {
-	-MODULE[ModuleRadar] {}
-}
-@PART[IS7]:NEEDS[FoxDefenseContracts&SMA] {
-	-MODULE[ModuleRadar] {}
-}
-@PART[Leopard1]:NEEDS[FoxDefenseContracts&SMA] {
-	-MODULE[ModuleRadar] {}
-}
-@PART[Leopard2A5]:NEEDS[FoxDefenseContracts&SMA] {
-	-MODULE[ModuleRadar] {}
-}
-@PART[M103]:NEEDS[FoxDefenseContracts&SMA] {
-	-MODULE[ModuleRadar] {}
-}
-@PART[M3Bradly]:NEEDS[FoxDefenseContracts&SMA] {
-	-MODULE[ModuleRadar] {}
-}
-@PART[Obj906]:NEEDS[FoxDefenseContracts&SMA] {
-	-MODULE[ModuleRadar] {}
-}
