Updates from modpack

--- a/EW/Radars.cfg
+++ b/EW/Radars.cfg
@@ -169,7 +169,7 @@
 	@author = Toonu
 	@manufacturer = Kerbal Kombat Anthology
 	@mass = 1.2
-	@description = Powerful and heavy air radar, guzzles E/C. Needs 2 engines minimum to function and locks onto fighter sized aircraft at 21km. It was used in the F-4C.
+	@description = Powerful and heavy air radar, guzzles E/C. Needs 2 engines minimum to function and locks onto fighter sized aircrafts at 21km. It was used in the F-4C.
 	
 	@MODULE[ModuleRadar] {
 		radarName = AN/APQ-100 Targeting radar
@@ -273,7 +273,7 @@
 	@author = Toonu
 	@manufacturer = Kerbal Kombat Anthology
 	@mass = 0.8
-	@description = Average air radar with 64km of range. Requires 2 engines minimum to function and locks onto fighters at 19km. It was used on various aircraft such as the Buccaneer and the Electric Lightning.
+	@description = Average air radar with 64km of range. Requires 2 engines minimum to function and locks onto fighters at 19km. It was used on various aircrafts such as the Buccaneer and the Electric Lightning.
 
 	
 	@MODULE[ModuleRadar] {
@@ -466,14 +466,9 @@ author = Toonu
 rescaleFactor = 4.56
 
 // --- node definitions ---
-node_attach = 0.0, 0, 0, 0, -1, 0, 0
+node_stack_bottom = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 1, 1, 1
+node_attach = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 0, 1
 
-NODE {
-	name = attach
-	transform = attachNode
-	size = 1
-	method = FIXED_JOINT //FIXED_JOINT, HINGE_JOINT, LOCKED_JOINT, MERGED_PHYSICS or NO_PHYSICS
-}
 
 // --- editor parameters ---
 TechRequired = precisionEngineering
@@ -486,7 +481,7 @@ bulkheadProfiles = srf
 title = 1RL13M P-15 Tropa Surveillance Radar
 manufacturer = Kerbal Kombat Anthology
 description = The NNRIRE 1RL13M/P-15 "Tropa" (Flat Face A) small surveillance radar that is suitable for mobile SAM sites. Maximum detection and lock range is 150km.
-attachRules = 0,1,0,0,1
+attachRules = 1,1,0,0,1
 
 // --- standard part parameters ---
 mass = 1.45
@@ -711,14 +706,8 @@ author = Toonu
 rescaleFactor = 1
 
 // --- node definitions ---
-node_attach = 0.0, 0, 0, 0, -1, 0, 0
-
-NODE {
-	name = attach
-	transform = attachNode
-	size = 1
-	method = FIXED_JOINT //FIXED_JOINT, HINGE_JOINT, LOCKED_JOINT, MERGED_PHYSICS or NO_PHYSICS
-}
+node_stack_bottom = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 1, 1, 1
+node_attach = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 0, 1
 
 // --- editor parameters ---
 TechRequired = precisionEngineering
@@ -731,7 +720,7 @@ bulkheadProfiles = srf
 title = 1S12 P-40 Armour Surveillance Radar
 manufacturer = Kerbal Kombat Anthology
 description = The NIIIP 1S12 P-40 "Armour" (Long Face) is a mobile radar with great performance. It can lock onto fighters at 39km and bombers at 99km, making them ideal for mobile SAM sites.
-attachRules = 0,1,0,0,1
+attachRules = 1,1,0,0,1
 
 // --- standard part parameters ---
 mass = 1.45
@@ -757,9 +746,9 @@ MODULE {
 		directionalFieldOfView = 1.5
 		resourceDrain = 0.2
 		
-		canLock = true
+		canLock = True
 		canTrackWhileScan = true
-		lockRotationSpeed = 90	
+		lockRotationSpeed = 90
 		lockRotationAngle = 1.5
 		maxLocks = 2
 		multiLockFOV = 30
@@ -1009,7 +998,7 @@ MODULE {
 	@author = Toonu
 	@manufacturer = Kerbal Kombat Anthology
 	@rescaleFactor = 2.4
-	@description = @description = The 1RL14 P-12 "Yenisei" (Spoon Rest A) Search Radar is a small VHF search radar that is more effective at closer ranges. Range is limited to 277.8km.
+	@description = @description = The NNRIRE 1RL14 P-12 "Yenisei" (Spoon Rest A) Search Radar is a small VHF search radar that is more effective at closer ranges. Range is limited to 277.8km.
 	
 	@MODULE[ModuleRadar] {
 		radarName = P-12 Search Radar
