--- a/Missiles/sam_3M9.cfg
+++ b/Missiles/sam_3M9.cfg
@@ -101,7 +101,7 @@ PART {
 		decoupleBoosters = false
 		boosterMass = 0.7
 		boosterDecoupleSpeed = 2
-		boostTransformName = 9M8 KrugB	
+		boostTransformName = boostTransform
 		boostExhaustTransformName = boostTransform
 		boostExhaustPrefabPath = BDArmory/Models/exhaust/mediumExhaust
 		exhaustPrefabPath = BDArmory/Models/exhaust/smallExhaust
