--- a/Missiles/sam_CIM10.cfg
+++ b/Missiles/sam_CIM10.cfg
@@ -100,8 +100,8 @@ PART {
 		decoupleBoosters = false
 		boosterMass = 0.7
 		boosterDecoupleSpeed = 2
-		boostTransformName = RIM-2B
-		boostExhaustTransformName = boostTransform
+		boostTransformName = boostTransform
+		boostExhaustTransformName = exhaustTransform
 		boostExhaustPrefabPath = BDArmory/Models/exhaust/mediumExhaust
 		exhaustPrefabPath = BDArmory/Models/exhaust/smallExhaust
 		audioClipPath = BDArmory/Sounds/rocketLoop
