Fixing exhausts of missiles.

--- a/Missiles/agm_AUMN2.cfg
+++ b/Missiles/agm_AUMN2.cfg
@@ -90,7 +90,7 @@ PART {
 		decoupleBoosters = false
 		boosterMass = 0.25
 		boosterDecoupleSpeed = 7
-		boostTransformName = RIM-2B
+		boostTransformName = boostTransform
 		boostExhaustTransformName = boostTransform
 		boostExhaustPrefabPath = BDArmory/Models/exhaust/smallExhaust
 		exhaustPrefabPath = BDArmory/Models/exhaust/smallExhaust
