--- a/Missiles/sam_9M38.cfg
+++ b/Missiles/sam_9M38.cfg
@@ -79,10 +79,10 @@ MODULE {
 		DetonationDistance = 25
 	
 		// --- Propulsion ---
-		thrust = 550	
+		thrust = 400	
 		cruiseThrust = 180
 		dropTime = 0
-		boostTime = 6
+		boostTime = 3
 		cruiseTime = 120
 		decoupleSpeed = 10
 		decoupleForward = true
@@ -93,15 +93,13 @@ MODULE {
 		liftArea = 0.05
 		steerMult = 14
 		maxTorque = 80
-		maxAoA = 34
+		maxAoA = 12
 		maxTurnRateDPS = 38
 		torqueRampUp = 50
 		
 		// --- Booster & Animation & Sound ---
 		decoupleBoosters = false
-		boosterMass = 0.7
-		boosterDecoupleSpeed = 2
-		boostTransformName = RIM-2B
+		boostTransformName = boostTransform
 		boostExhaustTransformName = boostTransform
 		boostExhaustPrefabPath = BDArmory/Models/exhaust/mediumExhaust
 		exhaustPrefabPath = BDArmory/Models/exhaust/smallExhaust
