--- a/Missiles/sam_CIM10.cfg
+++ b/Missiles/sam_CIM10.cfg
@@ -101,9 +101,9 @@ PART {
 		boosterMass = 0.7
 		boosterDecoupleSpeed = 2
 		boostTransformName = boostTransform
-		boostExhaustTransformName = exhaustTransform
+		boostExhaustTransformName = boostTransform
 		boostExhaustPrefabPath = BDArmory/Models/exhaust/mediumExhaust
-		exhaustPrefabPath = BDArmory/Models/exhaust/smallExhaust
+		exhaustPrefabPath = KKA/Exhaust/ExhaustSmallBlue
 		audioClipPath = BDArmory/Sounds/rocketLoop
 
 		// --- Engagement Rules --- 
