Fixes and exhausts.

--- a/EW/Balancing/MM_BDA.cfg
+++ b/EW/Balancing/MM_BDA.cfg
@@ -57,7 +57,7 @@
 		%shortName = CBU-103 CEM
 	}
 }
-@PART[BahaF86Launcher]:NEEDS[SMA]:FOR[KKA] {
+@PART[bahaH70Launcher]:NEEDS[SMA]:FOR[KKA] {
 	@title = LAU-51/A FFAR Launcher
 }
 @PART[bahaGau-8]:NEEDS[SMA]:FOR[KKA] {
@@ -224,7 +224,9 @@
 	@title = XM65 Missile Launcher
 }
 @PART[bahaTowMissile]:NEEDS[SMA]:FOR[KKA] {
-	@title = BGM-71A
+	@title = BGM-71A TOW
 	@description = The Hughes BGM-71A / TOW is anti-tank Optically tracked Wire command link guided missile in US service which replaced much smaller missiles like the SS.10 and ENTAC, offering roughly twice the effective range, a more powerful warhead, and a greatly improved semi-automatic guidance system that could also be equipped with infrared cameras for night time use. Entered service in the 1970s.
 	@MODULE[MissileLauncher] {
+		%shortName = BGM-71A TOW
+	}
 }
