--- a/EW/Balancing/MM_FDC.cfg
+++ b/EW/Balancing/MM_FDC.cfg
@@ -23,24 +23,9 @@
 @PART[Strids74]:NEEDS[SMA] {
 	-MODULE[ModuleRadar] {}
 }
-@PART[T-10]:NEEDS[SMA] {
-	-MODULE[ModuleRadar] {}
-}
-@PART[T-44]:NEEDS[SMA] {
-	-MODULE[ModuleRadar] {}
-}
-@PART[T-54]:NEEDS[SMA] {
-	-MODULE[ModuleRadar] {}
-}
-@PART[T-64]:NEEDS[SMA] {
-	-MODULE[ModuleRadar] {}
-}
-@PART[T-90]:NEEDS[SMA] {
-	-MODULE[ModuleRadar] {}
-}
 @PART[T26E4]:NEEDS[SMA] {
-	-MODULE[ModuleRadar] {}
 	@title = M26E4 Pershing
+	-MODULE[ModuleRadar] {}
 }
 @PART[AbramsA2]:NEEDS[SMA] {
 	-MODULE[ModuleRadar] {}
@@ -67,7 +52,7 @@
 	@title = FV4005 Stage II
 	-MODULE[ModuleRadar] {}
 }
-@PART[HSTVAP]:NEEDS[SMA] {
+@PART[HSTV]:NEEDS[SMA] {
 	-MODULE[ModuleRadar] {}
 }
 @PART[IS2]:NEEDS[SMA] {
@@ -143,9 +128,11 @@
 		%shortName = 85mm D-58
 	}
 }
+
 @PART[T-10]:NEEDS[SMA] {
 	@title = 52PT471N (T-10)
 	@description = The Object 730 / T-10 / IS-5 / IS-8 / IS-9 / IS-10 heavy tank turret armed with the 122mm 52PT471N / D-25TS gun was a Soviet heavy tank of the Cold War, the final development of the IS tank series. During development, it was called IS-8 and IS-9. It was accepted into production in 1952 as the IS-10 (Iosif Stalin, Russian form of Joseph Stalin), but due to the political climate in the wake of Stalin's death in 1953, it was renamed T-10.
+	-MODULE[ModuleRadar] {}
 	@MODULE[ModuleWeapon] {
 		%shortName = 122mm 52PT471N
 	}
@@ -153,6 +140,7 @@
 @PART[T-44]:NEEDS[SMA] {
 	@title = ZIS-S-53 (T-44)
 	@description = The Object 136 / T-44 medium tank is first developed and produced near the end of World War II by the Soviet Union. It was the successor to the T-34, offering improved ride and cross-country performance and much greater armor. Designed to be equipped with an 85 mm main gun, by the time it was fully tested the T-34 had also moved to this weapon. Both tanks offered similar performance, so introducing the T-44 was not considered as important as increasing T-34 production. Fewer than 2,000 T-44s were built, compared to about 58,000 T-34s. Although the T-44 was available by the end of the war, it was not used in combat.
+	-MODULE[ModuleRadar] {}
 	@MODULE[ModuleWeapon] {
 		%shortName = 85mm ZIS-S-53
 	}
@@ -160,6 +148,7 @@
 @PART[T-54]:NEEDS[SMA] {
 	@title = 52PT412 (T-54)
 	@description = The Object 137 / T-54 medium tank turret armed with 52PT412 / D-10T 100mm gun. T-54 / T-55 tanks are a series of Soviet main battle tanks introduced in the years following the Second World War. The first T-54 prototype was completed at Nizhny Tagil by the end of 1945.
+	-MODULE[ModuleRadar] {}
 	@MODULE[ModuleWeapon] {
 		%shortName = 100mm 52PT412
 	}
@@ -167,6 +156,7 @@
 @PART[T-64]:NEEDS[SMA] {
 	@title = 2A26 (T-64)
 	@description = The Object 432 / T-64 Soviet second-generation main battle tank turret armed with the 2A26 / D-81Т 125mm smooth-bore gun was introduced in the early 1960s. It was a more advanced counterpart to the T-62: the T-64 served tank divisions, while the T-62 supported infantry in motorized rifle divisions. It introduced a number of advanced features including composite armor, a compact engine and transmission, equipped with an autoloader to allow the crew to be reduced to three so the tank could be smaller and lighter. In spite of being armed and armored like a heavy tank, the T-64 weighed only 38 tonnes (42 short tons; 37 long tons).
+	-MODULE[ModuleRadar] {}
 	@MODULE[ModuleWeapon] {
 		%shortName = 125mm 2A26
 	}
@@ -174,6 +164,7 @@
 @PART[T-90]:NEEDS[SMA] {
 	@title = 2A46M2 (T-90) Vladimir
 	description = The T-90 is a third-generation Russian battle tank that entered service in 1993. The tank is a modern variation of the T-72B and incorporates many features found on the T-80U. Originally called the T-72BU, but later renamed to T-90, it is an advanced tank in service with Russian Ground Forces and the Naval Infantry. The T-90 uses a 125 mm 2A46M2 / D-81 smoothbore main gun, the 1A45T fire-control system, an upgraded engine, and gunner's thermal sight. Standard protective measures include a blend of steel and composite armour, smoke grenade dischargers, Kontakt-5 explosive-reactive armour and the Shtora infrared ATGM jamming system. It was designed and built by Uralvagonzavod, in Nizhny Tagil, Russia.
+	-MODULE[ModuleRadar] {}
 	@MODULE[ModuleWeapon] {
 		%shortName = 125mm 2A46M2
 	}
