--- a/EW/Balancing/MM_KField.cfg
+++ b/EW/Balancing/MM_KField.cfg
@@ -106,6 +106,9 @@
 		name = ModuleCASE
 		CASELevel = 0
 	}
+	@MODULE[ModuleRadar] {
+		%radarName = PGZ 09 Radar
+	}
 }
 @PART[PL-8B]:NEEDS[SMA] {
 	@title = PL-8B Thunderbolt
@@ -397,7 +400,8 @@
 		%engageGround = false
 		%engageSLW = false
 	}
-	RESOURCE[30x173Ammo] {
+	RESOURCE {
+		name = 30x173Ammo
 		amount = 2000
 		maxAmount = 2000
 	}
@@ -456,7 +460,8 @@
 }
 @PART[HeavyERA]:NEEDS[SMA] {
 	@title = 4S20 Kontakt ERA
-	MODULE[HitpointTracker] {
+	MODULE {
+		name = HitpointTracker
 		HitPoints = 3000
 		maxHitPoints = 3000
 		Armor = 200
@@ -464,7 +469,8 @@
 		ExplodeMode = Never
 	}
 	
-	MODULE[ModuleReactiveArmor] {
+	MODULE {
+		name = ModuleReactiveArmor
         objectNames = Box001
         textureNames = KerbalField/Parts/RU/HeavyERA
         textureDisplayNames = ERA1
