--- a/EW/Balancing/MM_MNWS.cfg
+++ b/EW/Balancing/MM_MNWS.cfg
@@ -152,7 +152,10 @@
 	}
 }
 @PART[3XR]:NEEDS[SMA] {
-	@title = Hongqi-9 system HT-233 radar.
+	@title = Hongqi-9 system LLQ-305B radar.
+	@MODULE[ModuleRadar] {
+		%radarName = LLQ-305B Radar
+	}
 	-MODULE[ModuleECMJammer] {}
 }
 @PART[3X2]:NEEDS[SMA] {
