--- a/EW/Balancing/MM_MalFunc.cfg
+++ b/EW/Balancing/MM_MalFunc.cfg
@@ -38,6 +38,11 @@
 	@description = The OTO Melara Compact 76mm water-cooled naval gun commonly used all around the world. It fires around 85 rounds/minute and is based on the Oto Melara 76/62C. The system is compact enough to be installed on relatively small warships. Its high rate of fire and the availability of several types of ammunition make it capable for short-range anti-missile point defence, anti-aircraft, anti-surface, and ground support.
 	@MODULE[ModuleWeapon] {
 		%shortName = 76mm OTO
+		@roundsPerMinute = 85
+		
+		@maxHeat = 1800
+		@heatPerShot = 100
+		@heatLoss = 20
 	}
 }
 @PART[thephalanx]:NEEDS[SMA] {
