--- a/EW/Balancing/MM_SMA.cfg
+++ b/EW/Balancing/MM_SMA.cfg
@@ -188,22 +188,31 @@
 @PART[AK100a18]:NEEDS[SMA] {
 	@title = AK-100
 	@description = The ADB AK-100 system with a A-214 Soviet 100mm naval cannon, with a maximum rate of fire of 60 rounds per minute, firing a 26.8 kg munition in HE anti-air or HE fragmentation varieties. The gun fire control radar was MR-114 "Lev". Equipped on patrol ships of project 1135, project 1154, anti-submarine ships of project 1155, nuclear cruiser Admiral Ushakov and Admiral Gorshkov-class frigate.
+	
+	@mass = 35.7
+	
 	MODULE {
 		name = ModuleCASE
 		CASELevel = 0
 	}
+	@MODULE[ModuleTurret] {
+		@minPitch = -10
+		@maxPitch = 85
+	}
 	@MODULE[ModuleWeapon] {	
 		%shortName = 100mm AK-100
-		@weaponType = ballistic	
+		@weaponType = ballistic
 		
-		%engageAir = true
-		%engageMissile = false
-		%engageGround = true
-		%engageSLW = false
+		@maxTargetingRange = 21500
+		@maxEffectiveDistance = 20000
+		
+		@maxHeat = 1800
+		@heatPerShot = 100
+		@heatLoss = 20	
 	}
 	@RESOURCE[100mmShells] {
-		@amount = 340
-		@maxAmount = 340
+		@amount = 80
+		@maxAmount = 80
 	}
 }
 @PART[AK130turret]:NEEDS[SMA] {
@@ -937,6 +946,9 @@
 	}
 	-RESOURCE[CMSmoke] {}
 	-MODULE[CMDropper] {}
+	-MODULE[ModuleDataTransmitter] {}
+	-MODULE[ModuleKerbNetAccess] {}
+	-MODULE[MissileFire] {}
 }
 	
 @PART[Strik1B]:NEEDS[SMA] {
@@ -975,7 +987,7 @@
 	}
 }
 @PART[T90MS]:NEEDS[SMA] {
-	@title = 2A46M-5 (T-90AM)
+	@title = 2A46M5 (T-90AM)
 	@description = The Object 188AM / T-90AM Russian Federation main battle tank turret armed with 125mm 2A46M-5 / D-81 smooth-bore gun. The T-90 has its origins in a Soviet-era program aimed at developing a single replacement for the T-64, T-72 and T-80 series of main battle tanks. The T-72 platform was selected as the basis for the new generation of tank owing to its cost-effectiveness, simplicity and automotive qualities.
 	-MODULE[ModuleReactionWheel] {}
 	-RESOURCE[CMSmoke] {}
@@ -1004,8 +1016,8 @@
 	}
 }
 @PART[SMTunguskaAAMT]:NEEDS[SMA]:AFTER[SMA] {
-	@title = 2А38 (2K22) Tunguska
-	@description = The KBP Object 352 / 2S6 / GM-352 "Tunguska" self-propelled anti-aircraft vehicle turret of the 2K22 (SA-19) "Grison" complex armed with a dual 30mm 2А38 guns and 9М311 Surface-to-Air missiles. It is designed to provide day and night protection for infantry and tank regiments against low-flying aircraft, helicopters, and cruise missiles in all weather conditions.
+	@title = 2A38 (2K22) Tunguska
+	@description = The KBP Object 352 / 2S6 / GM-352 "Tunguska" self-propelled anti-aircraft vehicle turret of the 2K22 (SA-19) "Grison" complex armed with a dual 30mm 2А38 guns and 9М311 Surface-to-Air missiles. It is designed to provide day and night protection for infantry and tank regiments against low-flying aircraft, helicopters, and cruise missiles in all weather conditions. The radar is 1RL144 ("Hot Shot") pulse-Doppler 3D radar system.
 	
 	MODULE {
 		name = ModuleCASE
@@ -1033,6 +1045,9 @@
 		%engageMissile = false
 		%engageGround = false
 		%engageSLW = false
+	}
+	@MODULE[ModuleRadar] {
+		%radarName = 1RL144 
 	}
 }
 
