--- a/Missiles/aam_K98.cfg
+++ b/Missiles/aam_K98.cfg
@@ -4,7 +4,7 @@
 	//
 
 	// --- general parameters ---
-	name = R98R
+	name = aam.R98R
 	module = Part
 	author = Toonu
 	rescaleFactor = 1
@@ -121,7 +121,7 @@ PART {
 	//
 
 	// --- general parameters ---
-	name = R98T
+	name = aam.R98T
 	module = Part
 	author = Toonu
 	rescaleFactor = 1
@@ -249,7 +249,7 @@ PART {
 	//
 
 	// --- general parameters ---
-	name = R98MR
+	name = aam.R98MR
 	module = Part
 	author = Toonu
 	rescaleFactor = 1
@@ -366,7 +366,7 @@ PART {
 	//
 
 	// --- general parameters ---
-	name = R98MT
+	name = aam.R98MT
 	module = Part
 	author = Toonu
 	rescaleFactor = 1
