--- a/Missiles/aam_K13.cfg
+++ b/Missiles/aam_K13.cfg
@@ -121,7 +121,7 @@ PART {
 	//
 
 	// --- general parameters ---
-	name = aam_R-3
+	name = aam.R3S
 	module = Part
 	author = Toonu
 	rescaleFactor = 1
