--- a/Turrets/tank_PT-76.cfg
+++ b/Turrets/tank_PT-76.cfg
@@ -22,7 +22,7 @@ PART {
 	bdacategory = Gun turrets
 	subcategory = 0
 	bulkheadProfiles = srf
-	title = 2А16 (PT-76)
+	title = 2A16 (PT-76)
 	manufacturer = Kerbal Kombat Anthology
 	description = The Object 740B / PT-76 Soviet amphibious light tank turret armed with 76 mm 2А16 / D-56TS / 52-PT-347 tank gun introduced in the early 1950s and soon became the standard reconnaissance tank of the Soviet Army and the other Warsaw Pact armed forces. The PT-76 is used in the reconnaissance and fire-support roles. 
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
