Masses and sizes.

--- a/EW/Balancing/MM_KField.cfg
+++ b/EW/Balancing/MM_KField.cfg
@@ -39,6 +39,8 @@
 	node_stack_bottom = 0.0, 0.0, -1.156, 0.0, 0.0, -1.0, 0, 1
 	@title = HQ-10 Red Banner
 	@description = The SAST HQ-10 (红旗-10) "Red Banner 10" short range Surface-to-Air missile, currently in service as a point defence missile system aboard PLA Navy warships as HHQ-10. The system was first adopted by the Liaoning aircraft carrier and the Type 056 corvette in 2011.
+	@rescaleFactor = 1.066666667
+	@mass = 0.02
 	@MODULE[MissileLauncher] {
 		%shortName = HQ-10
 	}
@@ -67,6 +69,7 @@
 @PART[HQ-19]:NEEDS[SMA] {
 	@title = HQ-19 Red Banner
 	@description = The HQ-19 "Red Banner 19" Surface-to-Air Missile is a vastly upgraded version of HQ-9 to counter ballistic missile and satellites (ASAT) on the lower end of Low Earth orbits, and it is the Chinese equivalent of THAAD. HQ-19 is armed with a dual purpose exosphere kinetic kill vehicle (kkv) warhead, which can be used against ballistic missile warheads or satellites. Its first flight occurred in 2003.
+	@mass = 1.3
 	@MODULE[MissileLauncher] {
 		%shortName = HQ-19
 	}
@@ -113,7 +116,7 @@
 @PART[PL-8B]:NEEDS[SMA] {
 	@title = PL-8B Thunderbolt
 	@description = The CATIC & XEMF PL-8B (霹雳-8) "Thunderbolt 8" Air-to-Air Missile originated from the Israeli Python-3 AAM. China's PLAAF was quite impressed with Python, and paid for licensed production as the PL-8 AAM in the 1980s. From March 1988 to April 1989, technology transfer to China was complete and the domestic PL-8B missile received state certification.
-    
+    @rescaleFactor = 0.9577922078
 	@MODULE[MissileLauncher] {
 		%shortName = PL-8B
 	}
@@ -121,6 +124,8 @@
 @PART[PL-10A]:NEEDS[SMA] {
 	@title = PL-10A Thunderbolt
 	@description = The EOTDC & CASC PL-10 (霹雳-10) "Thunderbolt 10" short-range, infrared-homing Air-to-Air Missile (AAM) developed by the People's Republic of China. It was designed by Dr. Liang Xiaogeng (梁晓庚) at the Luoyang Electro Optical Center. Development of the missile commenced in 2004 for use on stealth fighters such as the J-20. The missile is fitted with a multi-element IIR seeker capable of +/-90 degree off bore-sight angles. Flight is controlled by a thrust-vector controlled solid rocket motor and free-moving type control wings on the missile's tail.
+	@rescaleFactor = 0.9866666667
+	@mass = 0.089
 	@MODULE[MissileLauncher] {
 		%shortName = PL-10A
 	}
@@ -128,6 +133,8 @@
 @PART[PL-12]:NEEDS[SMA] {
 	@title = PL-12 Thunderbolt
 	@description = The CATIC PL-12 (霹雳-12) "Thunderbolt 12" active radar-guided beyond-visual-range Air-to-Air Missile developed by the People's Republic of China. Development was assisted by Vympel NPO and Agat of Russia. It is considered comparable to the US AIM-120 AMRAAM and the Russian R-77.
+	@rescaleFactor = 1.087570621
+	@mass = 0.180
 	@MODULE[MissileLauncher] {
 		%shortName = PL-12
 	}
@@ -164,6 +171,7 @@
 @PART[YJ-83]:NEEDS[SMA] {
 	@title = YJ-83 Eagle Strike
 	@description = The CASIC YJ-83 (鹰击-83) "Eagle Strike 83" (CSS-C-8) "Saccade" Chinese subsonic anti-ship surface-launched Cruise missile in service since 1999. Its range is 180km while carrying 165kg of explosives.
+	@rescaleFactor = 1.182758621
 	@MODULE[MissileLauncher] {
 		%shortName = YJ-83
 	}
@@ -171,6 +179,7 @@
 @PART[YJ-83K]:NEEDS[SMA] {
 	@title = YJ-83K Eagle Strike
 	@description = The CASIC YJ-83 (鹰击-83) "Eagle Strike 83" (CSS-N-8) "Saccade" Chinese subsonic anti-ship air-launched Cruise missile in service since 1999. Its range is 180km while carrying 165kg of explosives.
+	@rescaleFactor = 1.182758621
 	@MODULE[MissileLauncher] {
 		%shortName = YJ-83K
 	}
@@ -182,7 +191,8 @@
 @PART[YJ9]:NEEDS[SMA] {
 	@title = YJ-8 Eagle Strike
 	@description = The AMRI YJ-8 (鹰击-8) "Eagle Strike 8" (CSS-N-4) "Sardine" anti-ship missile developed by the People’s Republic of China. Because of its similar appearance and layout to the French Flying Fish anti-ship missile when it was first discovered, it was called "Chinese Flying Fish".
-    
+    @rescaleFactor = 1.114222222
+	@mass = 0.117
 	@MODULE[MissileLauncher] {
 		%shortName = YJ-8
 	}
@@ -190,7 +200,8 @@
 @PART[YJ12]:NEEDS[SMA] {
 	@title = YJ-12 Eagle Strike
 	@description = The NRI & TAAA YJ-12 (鹰击-12) "Eagle Strike 12" large supersonic anti-ship missile developed and put into service in the 2000s by the People's Republic of China. The program was to replace the existing YJ-83 and YJ-62 missiles.
-    
+    @rescaleFactor = 0.9618320611
+	@mass = 2.5
 	@MODULE[MissileLauncher] {
 		%shortName = YJ-12
 	}
@@ -198,7 +209,8 @@
 @PART[YJ18]:NEEDS[SMA] {
 	@title = YJ-18 Eagle Strike
 	@description = The TRI of CASIC YJ-18 (鹰击-18) "Eagle Strike 18" (CH-SS-NX-13) supersonic anti-ship missile developed by the People’s Republic of China. The missile is based on the Russian 3M54E "Kalibr". The missile uses a subsonic flight mode in the cruise phase to increase its range; the end attack phase is converted to a supersonic penetration.
-    
+    @rescaleFactor = 1.413793103
+	@mass = 1.579
 	@MODULE[MissileLauncher] {
 		%shortName = YJ-18
 	}
@@ -288,6 +300,8 @@
 @PART[METEOR]:NEEDS[SMA] {
 	@title = Meteor 
 	@description = The MBDA Meteor active-radar-homing beyond-visual-range Air-to-Air Missile for heavy electronic countermeasures environments with a range in excess of 100 kilometres. A solid-fuelled ramjet motor allows the missile to cruise at a speed of over Mach 4 and provides the missile with thrust and mid-course acceleration to target intercept. Meteor missiles entered service on Swedish Air Force JAS 39 Gripens in April 2016 and officially achieved initial operating capability (IOC) in July 2016. According to MBDA, Meteor has three to six times the kinetic performance of current air-air missiles of its type. The key to Meteor's performance is a throttle-able ducted rocket (ramjet) manufactured by Bayern-Chemie of Germany.
+	@rescaleFactor = 1.006896552
+	@mass = 0.19
 	@MODULE[MissileLauncher] {
 		%shortName = Meteor
 	}
@@ -340,6 +354,8 @@
 @PART[9M114]:NEEDS[SMA] {
 	@title = 9M114 Shturm
 	@description = The KMDB 9M114 "Shturm" / "Cocoon" (AT-6) "Spiral" Anti-Tank Guided Missile of the 9K113/114 complex accepted into service in the Soviet Union in 1976. The missile has no direct western counterpart, though, in role, it is closest to the AGM-114 Hellfire, and in guidance method, to the MGM-18 Lacrosse. The missile can be deployed on a variety of platforms, including the Mi-24V and from 1979-onwards the MT-LB based 9P149 tank destroyer. There is also a shipborne version of the missile, with the launcher holding six missiles. Soviet sources report kill ratios of 75–85% during the Soviet invasion of Afghanistan. 
+	@rescaleFactor = 0.9027777778
+	@mass = 0.0314
 	@MODULE[MissileLauncher] {
 		%shortName = 9M114 Shturm
 	}
@@ -354,6 +370,8 @@
 @PART[9M120]:NEEDS[SMA] {
 	@title = 9M120 Ataka
 	@description = The KBM 9M120 "Ataka" (AT-9) "Spiral 2" Anti-Tank Guided Missile used in the 9K120 surface or 9А2313 aerial complex accepted into service in the Soviet Union in 1985. It is the next major generation in the 9K114 Shturm family. This missile's primary variant was designed to defeat tanks with composite armour and explosive reactive armour.
+	@rescaleFactor = 1.196581197
+	@mass = 0.0495
 	@MODULE[MissileLauncher] {
 		%shortName = 9M120 Ataka
 	}
@@ -361,6 +379,8 @@
 @PART[9M121]:NEEDS[SMA] {
 	@title = 9M127 Vikhr
 	@description = The KBP-IDB 9M127 "Vikhr" (AT-16) "Scallion" laser-guided Anti-Tank Guided Missile of the 9K121 complex accepted into service in the Soviet Union in 1990. The missile can be launched from warships, Ka-50 and Ka-52 helicopters, and Su-25T aircraft. The missile is designed to engage vital ground targets, including armoured targets fitted out with built-in and add-on explosive reactive armour, at a range of up to 8 km when fired from a helicopter and 10 km when fired from a fixed-wing aircraft in daytime and up to 5 km at night, as well as air targets in conditions of air defence assets activity.
+	@rescaleFactor = 1.196581197
+	@mass = 0.045
 	@MODULE[MissileLauncher] {
 		%shortName = 9M127 Vihkr
 	}
@@ -481,6 +501,8 @@
 @PART[KH-41]:NEEDS[SMA] {
 	@title = 3M80A Moskit
 	@description = The Raduga 3M80A / Kh-41 "Moskit" (SS-N-22) "Sunburn" Soviet / Russian supersonic low-altitude anti-ship Cruise missile with a ramjet propulsion system designed to destroy surface ships with a displacement of up to 20,000 tons from naval strike groups, amphibious formations, convoys and single ships, both displacement and hydrofoil and air cushion under fire and electronic counteraction with modern and promising enemy means. The firing range is from 10 to 120 km for a low-altitude trajectory, 250 km for an altitude flight profile.
+	@rescaleFactor = 1.191746032
+	@mass = 4.5
 	@MODULE[MissileLauncher] {
 		%shortName = 3M80A Moskit
 	}
@@ -520,6 +542,8 @@
 @PART[RVV-AE-PD]:NEEDS[SMA] {
 	@title = R-77-PD
 	@description = The Vympel NPO R-77-PD (AA-12) "Adder" Active Radar homing Air-to-Air missile ramjet-powered version of the standard R-77. In the early 1990s, she successfully passed state tests and was adopted by the Russian Air Force in 1994. It's modernized versions are in active service up to this day. Uses 9B1348 seeker. The R-77 missile can be equipped with modernized fighters of the Su-27 and MiG-29 families. 
+	@rescaleFactor = 1.028571429
+	@mass = 0.175
 	@MODULE[MissileLauncher] {
 		%shortName = R-77-PD
 	}
@@ -537,6 +561,7 @@
 @PART[SS-26]:NEEDS[SMA] {
 	@title = 9M720 Iskander
 	@description = The KBM 9M720 "Iskander" (SS-26) "Stone" Russian operational-tactical missile system of the 9K720 complex. The main purpose of the Iskander missile systems is to destroy enemy air and missile defence systems, as well as the most important objects covered by them, at ranges of up to 500 km.
+	@rescaleFactor = 1.013888889
 	@MODULE[MissileLauncher] {
 		%shortName = 9M720 Iskander
 	}
@@ -572,6 +597,8 @@
 @PART[AIM-120D]:NEEDS[SMA] {
 	@title = AIM-120D AMRAAM
 	@description = The Raytheon AIM-120D Air-to-Air Active radar homing Missile is an upgraded version of the AIM-120 with improvements in almost all areas, including 50% greater range (than the already-extended range AIM-120C-7) and better guidance over its entire flight envelope yielding an improved kill probability. Raytheon began testing the D model on August 5, 2008, the company reported that an AIM-120D launched from an F/A-18F Super Hornet passed within lethal distance of a QF-4 target drone at the White Sands Missile Range. The range of the AIM-120D is classified, but is thought to extend to about 100 miles (160 km).
+	@rescaleFactor = 1.020689655
+	@mass = 0.152
 	@MODULE[MissileLauncher] {
 		%shortName = AIM-120D
 	}
@@ -579,6 +606,8 @@
 @PART[AIM9X]:NEEDS[SMA] {
 	@title = AIM-9X Sidewinder
 	@description = The Raytheon AIM-9X Sidewinder infrared homing Air-to-Air Missile entered service in November 2003 with the USAF and is a substantial upgrade to the Sidewinder family featuring an imaging infrared focal-plane array seeker with claimed 90° off-boresight capability, compatibility with helmet-mounted displays such as the new U.S. Joint Helmet Mounted Cueing System, and a totally new three-dimensional thrust-vectoring control system providing increased turn capability over traditional control surfaces. It retains the same rocket motor, fuse and warhead of the 9-"Mike", AIM-9X demonstrated potential for a Lock-on After Launch capability, allowing for possible internal bays usage.
+	@rescaleFactor = 0.9378881988
+	@mass = 0.0835
 	@MODULE[MissileLauncher] {
 		%shortName = AIM-9X
 	}
@@ -621,6 +650,7 @@
 @PART[TOW2B]:NEEDS[SMA] {
 	@title = BGM-71F
 	@description = The Hughes-Raytheon BGM-71 / TOW 2B anti-tank guided missile in US service which replaced much smaller missiles like the SS.10 and ENTAC, offering roughly twice the effective range, a more powerful warhead, and a greatly improved semi-automatic guidance system that could also be equipped with infrared cameras for night time use. First produced in 1970, TOW is one of the most widely used anti-tank guided missiles. BGM-71D / TOW 2B variant features top-down attack using explosively formed penetrators against its targets.
+	@mass = 0.0226
 	@MODULE[MissileLauncher] {
 		%shortName = BGM-71F
 	}
