--- a/EW/Balancing/MM_SMA.cfg
+++ b/EW/Balancing/MM_SMA.cfg
@@ -686,11 +686,13 @@
 @PART[MissileErektor]:NEEDS[SMA] {
     @title = 9P117 Strategic Missile Launcher.
     @description = The 9P117 launcher used with the 9K72 System (SS-1B) "Scud" on the TRK MAZ-543 "Uragan" launch vehicle chassis for standing up and firing large ballistic style missiles.
+	@rescaleFactor = 1.63636363636
 }
 @PART[SkudD]:NEEDS[SMA] {
     @title = 8A61 Zemlya
     @description = The OKB-1 8A61/R-11 "Zemlya" (SS-1B) "Scud" Soviet tactical ballistic missile launched from the 9P117 launcher of 8К11 Complex or 9K72 in case of R-17. It was the first of several similar Soviet missiles to be given the reporting name Scud.
-	
+	@rescaleFactor = 1.63636363636
+	@mass = 4.4
 	-MODULE[TweakScale] {}
 	
 	MODULE {
@@ -766,7 +768,7 @@
 	// --- general parameters ---
 	@module = Part
 	@author = Spanner
-	@rescaleFactor = 1
+	@rescaleFactor = 0.8106666667
 
 	-NODE[Node1] {}
 	-NODE[Node2] {}
@@ -881,6 +883,7 @@
 @PART[S125Launcher]:NEEDS[SMA] {
 	@title = 5P71 S-125 TEL
 	@description = THe 5P71 / SM-87A-1 launcher turret capable of holding and firing up to 2 (5V24) missiles of the System 125. Warranty void if anything except missiles are mounted. To enable the turret, select the mounted missile from the weapon manager.
+	@rescaleFactor = 0.8106666667
 }
 
 @PART[ShilkaZSU234turret]:NEEDS[SMA] {
@@ -1054,6 +1057,8 @@
 @PART[SMA57E6BGM]:NEEDS[SMA] {
 	@title = 9M335 Pantsir-S1
 	@description = The KBP 9M335 / 57E6 Surface-to-Air two-stage solid fuel radio/optical command-guided missile of the 96K6 "Pantsir-S1" (SA-22) "Greyhound" anti-aircraft gun-missile system in service from 2012 in the Russian Federation Armed Forces. Guided by the 1L36 "Roman" tracking radar. The missile is being superseded by 23Ya6 missile of Pantsir-2.
+	@rescaleFactor = 1.31120332
+	@mass = 0.076
 	@MODULE[MissileLauncher] {
 		@shortName = 9M335 Pantsir-S1
 	}
